# variance-min-classification

./: .env.example  .gitignore  CLAUDE.md  CONVNET_PLAN.md  Makefile  PLAN.md  README.md  TRANSFORMER_PLAN.md  cifar10_resnet.py  dataset_creator.py  detach_tester.py  download_medical_datasets.py  download_one.py  fine_tune.md  l2_calibrate.md  lambda_download.sh  lambda_launch.sh  lambda_terminate.sh  lambda_train.sh  launch_lambda.sh  medical_calibration.md  pyproject.toml  requirements-base.txt  requirements-cpu.txt  requirements-gpu.txt  requirements.txt
.claude/: check_rows.md  databricks_run.md  notebook_create.md
.claude/commands/: checkout.md  clarify.md  commit.md  confirm.md  doc_change.md  doc_diff.md  lambda_train.md  pickup.md  push.md  review.md
.cursor/: terminal.mdc
.cursor/rules/: terminal.mdc
infra/: download.sh  gpu-instance.yaml  lambda_download.sh  lambda_launch.sh  lambda_train.sh  lambda_upload.sh  prepare_iwslt14.sh  run_medical_calibration.sh  sagemaker-setup.sh  setup.sh  setup_remote.sh  train.sh  upload.sh
jl/: config.py  double_runner.py  empirical_runner.py  empirical_variance.py  model_creator.py  model_tracker.py  models.py  multi_experiment_grapher.py  multi_runner.py  optimizer.py  parallel_models.py  problem.py  scheduler.py  single_runner.py  ten_runner.py  variance_experiment_runner.py
jl/double_descent/: L2_CALIBRATION_PLAN.md  __init__.py  calibration_baselines.py  convnet_config.py  convnet_data.py  convnet_main.py  fine_tune_evaluation.py  fine_tune_lib.py  l2_calibrate_evaluation.py  l2_calibrate_lib.py  masked_batchnorm.py  plot.py  plot_fine_tune.py  plot_l2_calibrate.py  plot_single_k.py  resnet18k.py  temperature_scaling.py  trainer.py
jl/feature_experiments/: dropout.py  feature_combinations.py  feature_problem.py  (+18 more)
scripts/: prepare_iwslt14.sh  setup.sh
src/: binomial_exploration.py  cifar10_resnet.py  class_pattern_mlp.py  custom_modules.py  d_dim_problem.py  dataset_creator.py  experiment_runner.py  gradient.py  gradient_grapher.py  helpers.py  hyper_parameters.py  itertools_ceck.py  main.py  models.py  outer_model.py  prob_tester.py  single_d_problem.py  single_runner.py  splitter.py  train.py  train_val_split.py  variance_minimizer_script.py  weight_norm_tester.py
test/: test_d_dim_problem.py  test_dataset_creator.py  test_dim_indepenent_probs.py  test_feature_problem.py  test_frobenius_reg.py  test_splitter.py  test_train_val_split.py
tests/: test_binomial_exploration.py  test_d_dim_problem.py  test_dataset_creator.py
(+332 files in other folders)
