[project]
name = "variance-min-classification"
version = "0.1.0"
description = "Variance-minimizing classification models with various architectures and regularization strategies"
requires-python = ">=3.11"

# Core dependencies - always installed (CPU-safe, no torch)
dependencies = [
    "numpy>=1.26,<2.0",
    "matplotlib>=3.5",
    "scipy>=1.10",
    "sacrebleu>=2.3",
    "pytest>=7.0",
]

[project.optional-dependencies]
# GPU experiments (double descent, etc.)
# Note: torch and torchvision are installed separately via setup.sh
# (requires --index-url for CUDA builds that pyproject.toml cannot express)
#
# transformers + sentencepiece + protobuf are needed by M2M100Vocab.decode()
# (called from compute_bleu in transformer experiments). Including them here
# so transformer DD runs work out of the box.
gpu = [
    "scikit-learn>=1.3",
    "datasets>=2.19",
    "transformers>=4.41",
    "sentencepiece>=0.2",
    "protobuf>=4.0",
    "kronfluence>=1.0",
]
# LLM reward model training - adds Flash Attention 3 stack on top of gpu
llm = [
    "tokenizers>=0.15.2",
    "safetensors>=0.4.2",
    "accelerate>=0.30",
    "kernels",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra"]
